Add screen navigator
attempted to add navigator between screens, but failed.
Error: Unable to resolve "@react-navigation/native".
I've tried to run: 'npm install @react-navigation/native'
and 'npm install react-navigation',
but problem persists

--- a/package.json
+++ b/package.json
@@ -11,5 +11,12 @@
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
+  },
+  "dependencies": {
+    "@react-navigation/native": "^6.1.7",
+    "@react-navigation/native-stack": "^6.9.13",
+    "react-native-safe-area-context": "^4.6.3",
+    "react-native-screens": "^3.22.0",
+    "react-navigation": "^4.4.4"
   }
 }
