--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -15,10 +15,13 @@
     "@react-navigation/native-stack": "^6.9.13",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
+    "react-native-paper": "^5.9.1",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11"
   },
   "devDependencies": {
