--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/bottom-tabs": "^6.5.8",
@@ -19,7 +20,7 @@
     "@react-navigation/stack": "^6.3.17",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
-    "firebase": "^10.0.0",
+    "firebase": "^9.22.2",
     "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
