--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -34,7 +34,8 @@
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.11",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4"
+    "react-navigation-stack": "^2.10.4",
+    "recoil": "^0.7.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
